Changelog
=========

1.0a7 (unreleased)
------------------

- Added Spanish (es) and Basque (eu) translation
  [erral]
- Added PO file generation script
  [erral]
- Use similar pattern to plone.formwidget.namedfile for the data converter.
  [gaudenz]
- Add @@download BrowserView for file downloads
  [gaudenz]
- Base widget on z3c.form.widget.Widget instead of MultiWidget. The MultiWidget
  is for combining different widgets into one.
  [gaudenz]
- Don't call update from render. This is not necessary and can lead to unwanted
  side-effects.
  [gaudenz]
- Extract FileUpload objects instead of relying on Widget.extract to do the mostly
  right thing.
  [gaudenz]

1.0a6 (2013-01-22)
------------------

* Fixed bug: "add files" link was opening multiple file dialogs.
  [rafaelbco]
* Fixed bug: bugfix of the previous release didn't work on IE 7.
  [rafaelbco]

1.0a5 (2013-01-21)
------------------

* Fixed bug on IE: When an file-input is opened via a scripted, forced click()
  event, IE won't let you submit the form.
  [rafaelbco]
* Updated pt_BR translation.
  [rafaelbco]

1.0a4 (2012-12-20)
------------------

* Updated URL on setup.py
  [rafaelbco]

1.0a3 (2012-12-20)
------------------

* Changed the UI so now there's a link to "add files" instead of an standard
  input[type=file] HTML element (which still exists, but is hidden). Users were
  complaining that the old UI was confusing since the textbox of the
  input[type=file] element was always empty.
  [rafaelbco]

1.0a2 (2012-12-20)
------------------

* Removed integration with jQuery plugin. Instead we use HTML and javascript,
  and when applicable, the "multiple" extension from HTML5 which lets a
  user upload multiple files at once.
  [tmog]

* Fix minor bugs on the new non-flash implementation.
  [rafaelbco]

* Removed dependency on plone.app.drafts.
  [rafaelbco]

1.0a1 (2011-09-13)
------------------

* Initial release